<resources>
    <string name="app_name">chess</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Play chess online today!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your email id and password to sign in</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>


    <string name="nav_my_profile">My Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <string name="image_arrow_back">image_arrow_back</string>
    <string name="image_arrow_forward">image_arrow_forward</string>
    <string name="black">BLACK</string>
    <string name="white">WHITE</string>
    <string name="elo">Elo</string>
    <string name="games">Games</string>
    <string name="wins">Wins</string>
    <string name="loses">Loses</string>
    <string name="recent_games">Recent Games</string>
    <string name="draws">Draws</string>
    <string name="rook">Rook</string>
    <string name="queen">Queen</string>
    <string name="bishop">Bishop</string>
    <string name="knight">Knight</string>
    <string name="resign">Resign</string>
    <string name="offer_draw">Offer Draw</string>
    <string name="accept_draw">Accept Draw Offer</string>
    <string name="joined_at">Joined at: %1$s</string>
    <string name="challenge_to_a_game">Challenge to a game</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="unfriend">Unfriend</string>
    <string name="challenges">Challenges</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="black_to_play">Black To Play</string>
    <string name="white_to_play">White To Play</string>
    <string name="best_move">Best move!</string>
    <string name="keep_going">Keep going…</string>
    <string name="success">Success!</string>
    <string name="not_the_move">That\'s not the move!</string>
    <string name="try_again">Try something else.</string>
    <string name="your_turn">Your turn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="won_by_resignation">%1$s won by resignation</string>
    <string name="new_elo_rating">new elo rating</string>
    <string name="go_back_a_move">go back a move</string>
    <string name="go_forward_a_move">go forward a move</string>
    <string name="flip_board">flip board</string>
    <string name="extra_settings">extra settings</string>
    <string name="go_back">go back</string>
    <string name="saved_games">Saved Games</string>
</resources>