<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ProfileActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_my_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/iv_toolbar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/ic_white_arrow_back"/>

            <ImageView
                android:layout_gravity="right"
                android:id="@+id/iv_toolbar_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_show_more_white"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/ll_profile_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="22dp"
                android:paddingHorizontal="18dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_user_place_holder" />
                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="username"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="12dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textColor="@color/primary_text_color"
                    />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:layout_marginBottom="12dp">
                <LinearLayout

                    android:id="@+id/ll_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
                        android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
                        android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
                        android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/card_view_elevation"
                        app:cardCornerRadius="@dimen/card_view_corner_radius">
                        <LinearLayout
                            android:gravity="center"
                            android:paddingHorizontal="9dp"
                            android:paddingVertical="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:paddingTop="8dp"
                                android:text="@string/elo"
                                android:textSize="14sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/secondary_text_color"
                                />
                            <TextView
                                android:gravity="center"
                                android:id="@+id/tv_elo"
                                android:paddingTop="12dp"
                                android:paddingBottom="8dp"
                                tools:text="800"
                                android:textColor="@color/primary_text_color"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_width="45dp"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
                        android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
                        android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
                        android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/card_view_elevation"
                        app:cardCornerRadius="@dimen/card_view_corner_radius">
                        <LinearLayout
                            android:gravity="center"
                            android:paddingHorizontal="9dp"
                            android:paddingVertical="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:paddingTop="8dp"
                                android:text="@string/games"
                                android:textSize="14sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/secondary_text_color"
                                />
                            <TextView
                                android:gravity="center"
                                android:id="@+id/tv_games_count"
                                android:paddingTop="12dp"
                                android:paddingBottom="8dp"
                                tools:text="1000"
                                android:textColor="@color/primary_text_color"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_width="45dp"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
                        android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
                        android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
                        android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/card_view_elevation"
                        app:cardCornerRadius="@dimen/card_view_corner_radius">
                        <LinearLayout
                            android:gravity="center"
                            android:paddingHorizontal="9dp"
                            android:paddingVertical="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:paddingTop="8dp"
                                android:text="@string/wins"
                                android:textSize="14sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/secondary_text_color"
                                />
                            <TextView
                                android:gravity="center"
                                android:id="@+id/tv_games_won"
                                android:paddingTop="12dp"
                                android:paddingBottom="8dp"
                                tools:text="1000"
                                android:textColor="@color/primary_text_color"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_width="45dp"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
                        android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
                        android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
                        android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/card_view_elevation"
                        app:cardCornerRadius="@dimen/card_view_corner_radius">
                        <LinearLayout
                            android:gravity="center"
                            android:paddingHorizontal="9dp"
                            android:paddingVertical="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:paddingTop="8dp"
                                android:text="@string/loses"
                                android:textSize="14sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/secondary_text_color"
                                />
                            <TextView
                                android:gravity="center"
                                android:id="@+id/tv_games_lost"
                                android:paddingTop="12dp"
                                android:paddingBottom="8dp"
                                tools:text="1000"
                                android:textColor="@color/primary_text_color"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_width="45dp"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
                        android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
                        android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
                        android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="@dimen/card_view_elevation"
                        app:cardCornerRadius="@dimen/card_view_corner_radius">
                        <LinearLayout
                            android:gravity="center"
                            android:paddingHorizontal="9dp"
                            android:paddingVertical="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:paddingTop="8dp"
                                android:text="@string/draws"
                                android:textSize="14sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/secondary_text_color"
                                />
                            <TextView
                                android:gravity="center"
                                android:id="@+id/tv_games_drawn"
                                android:paddingTop="12dp"
                                android:paddingBottom="8dp"
                                tools:text="1000"
                                android:textColor="@color/primary_text_color"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_width="45dp"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </HorizontalScrollView>

            <com.google.android.material.divider.MaterialDivider
                android:layout_height="1dp"
                android:layout_width="match_parent"
                />

            <androidx.cardview.widget.CardView
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:elevation="10dp"
                android:backgroundTint="@color/greyTint"
                >
                <TextView
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/recent_games"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/primary_text_color"/>

                <ImageView
                    android:layout_marginHorizontal="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_forward"
                    android:layout_gravity="end|center_vertical"
                    />

            </androidx.cardview.widget.CardView>
            <com.google.android.material.divider.MaterialDivider
                android:layout_height="1dp"
                android:layout_width="match_parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recent_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fefefe"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/game_history_item" />


        </LinearLayout>



    </ScrollView>



</LinearLayout>